k8s/realworld-flux-stack/dev/platform/envoy/routes/grafana/reference-grant.yaml
apiVersion: gateway.networking.k8s.io/v1beta1
kind: ReferenceGrant
metadata:
  name: allow-envoy-to-grafana
  namespace: monitoring
spec:
  from:
    - group: gateway.networking.k8s.io
      kind: HTTPRoute
      namespace: envoy-system
  to:
    - group: ""
      kind: Service
      name: kube-prometheus-stack-grafana
