k8s/realworld-flux-stack/dev/platform/envoy/routes/grafana/route.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: grafana
  namespace: envoy-system
  labels:
    gateway: envoy-gateway
spec:
  parentRefs:
    - name: envoy-gateway
      namespace: envoy-system
      sectionName: https-wildcard
  hostnames:
    - "grafana.mydevopsjourney.fun"
  rules:
    - backendRefs:
        - group: ""
          kind: Service
          name: kube-prometheus-stack-grafana
          namespace: monitoring
          port: 80
          weight: 1
      matches:
        - path:
            type: PathPrefix
            value: /
